@@ -23,6 +23,7 @@ export(get_consensus)
 export(get_consensusAA)
 export(get_klets)
 export(get_matches)
+export(get_scores)
 export(icm_to_ppm)
 export(make_DBscores)
 export(merge_motifs)
